# players_api

./: Cargo.toml  README.md
local-stack/: docker-compose.yml
migrations/2023-12-25-222359_create_players/: up.sql
migrations/2023-12-31-205308_create_walllets/: up.sql
src/: auth.rs  database.rs  error_handler.rs  ethereum_service.rs  lib.rs  main.rs  schema.rs
src/hello/: routes.rs
src/player/: mod.rs  model.rs  routes.rs
src/wallet/: mod.rs  model.rs  routes.rs
tests/: integration-test.rs  integration_test.rs
