[package]
name = "players_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "1.0.1"
diesel = { version = "2.1.4", features=["mysql"]}
ethers = "2.0.11"
eyre = "0.6.11"
hex = "0.4.3"